# Claude-to-IM-skill

.claude/: settings.local.json
.github/workflows/: build-manager.yml
manager/: LICENSE  README.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
manager/icons/: generate.cjs
manager/src/: App.tsx  i18n.ts  index.css
manager/src-tauri/: Cargo.toml  tauri.conf.json
manager/src-tauri/src/: bridge.rs  config.rs  main.rs  messages.rs  skill_installer.rs  tray.rs
manager/src/pages/: Chat.tsx  Config.tsx  Install.tsx  Logs.tsx  Settings.tsx  Status.tsx
manager/src/store/: bridge.ts
scripts/: supervisor-windows.ps1
src/: llm-provider.ts
