[package]
name = "claude-to-im-manager"
version = "1.0.0"
description = "GUI Manager for Claude-to-IM Bridge"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "notification", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]